--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -7,29 +7,13 @@ right_format = """$all"""
 command_timeout = 1000
 
 [character]
-vicmd_symbol = "[N] >>>"
 success_symbol = '[➜](bold green)'
+
+# [directory.substitutions]
+# '~/tests/starship-custom' = 'work-project'
 
 [git_branch]
 format =  '[$symbol$branch(:$remote_branch)]($style)'
-
-[aws]
-format = '[$symbol(profile: "$profile" )(\(region: $region\) )]($style)'
-disabled = false
-style = 'bold blue'
-symbol = " "
-
-[golang]
-format = '[ ](bold cyan)'
-
-[kubernetes]
-symbol = '☸ '
-disabled = true
-detect_files = ['Dockerfile']
-format = '[$symbol$context( \($namespace\))]($style) '
-
-[docker_context]
-disabled = true
 
 [palettes.catppuccin_mocha]
 rosewater = "#f5e0dc"
