--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -59,7 +59,7 @@ inner.horizontal = 10
 inner.vertical =   10
 outer.left =       10
 outer.bottom =     10
-outer.top =        10
+outer.top =        [{monitor.'LC49G95T' = 44}, 10]
 outer.right =      10
 
 # 'main' binding mode declaration
