--- a/ghostty/config
+++ b/ghostty/config
@@ -1,6 +1,6 @@
 theme = catppuccin-mocha
 font-size = 16
-font-family = JetBrainsMonoNerdFont
+font-family = JetBrainsMonoNL Nerd Font
 background-blur-radius = 20
 mouse-hide-while-typing = true
 window-decoration = auto
